@@ -16,6 +16,8 @@
 	* src/global.c (assign_keyinfo, shortcut_init): Give nicer names
 	to the dedicated keys, for when they show up in the help lines.
 	* src/rcfile.c (parse_binding): K-keys no longer exist.
+	* src/global.c, src/rcfile.c, doc/nanorc.sample.in: Allow the
+	codes from the Ins and Del keys to be rebound.
 
 2014-04-16  Benno Schulenberg  <bensberg@justemail.net>
 	* src/winio.c (get_mouseinput): Properly find also the zeroeth
